depl-k8s-istio/nodejs-redis/api.yml
apiVersion: v1
kind: Service
metadata:
  namespace: node-redis
  name: node-redis
  labels:
    app: node-redis
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: node-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-redis
  name: node-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-redis
  template:
    metadata:
      labels:
        app: node-redis
    spec:
      containers:
      - name: node-redis
        image: docker.io/vinho0onguyen/my_api:nodejs-redis
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
