depl-k8s-istio/nodejs-redis/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: node-redis
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        args: 
        - --requirepass "redis"
---
apiVersion: v1
kind: Service
metadata:
  namespace: node-redis
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
