depl-k8s-istio/nodejs-redis/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: node-redis
  name: nodejs-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: node-redis
  name: nodejs-ingress
spec:
  hosts:
  - "*"
  gateways:
  - nodejs-gateway
  http:
  
  - route:
      - destination:
          host: node-redis
          port:
            number: 5000
